src-tauri/tests/snapshots/agent_stream_event_wire__wire_format_error.snap
---
source: tests/agent_stream_event_wire.rs
expression: "to_value(AgentStreamEvent::Error\n{ message: \"Sidecar crashed\".into(), persisted: false, internal: true, })"
---
internal: true
kind: error
message: Sidecar crashed
persisted: false
