src-tauri/tests/snapshots/agent_stream_event_wire__wire_format_plan_captured.snap
---
source: tests/agent_stream_event_wire.rs
expression: "to_value(AgentStreamEvent::PlanCaptured {})"
---
kind: planCaptured
