src-tauri/tests/snapshots/agent_stream_event_wire__wire_format_streaming_partial.snap
---
source: tests/agent_stream_event_wire.rs
expression: "to_value(AgentStreamEvent::StreamingPartial { message: empty_message(), })"
---
kind: streamingPartial
message:
  content: []
  id: msg-1
  role: assistant
