src-tauri/tests/snapshots/agent_stream_event_wire__wire_format_update.snap
---
source: tests/agent_stream_event_wire.rs
expression: "to_value(AgentStreamEvent::Update { messages: vec![empty_message()], })"
---
kind: update
messages:
  - content: []
    id: msg-1
    role: assistant
